build: use autotools

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 *.o
 *.so
+*.la
+*.lo
+
+.deps/
+.libs/
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.guess
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+config.h*
+p11-kit-openssl-engine-*.tar.gz
+stamp-h1
