all: install systemd unit files for user session remoting

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 libcrypto_enginesdir = $(LIBCRYPTO_ENGINESDIR)
+systemd_userunitdir = $(SYSTEMD_USERUNITDIR)
 
 libcrypto_engines_LTLIBRARIES = \
 	libp11-kit-engine.la
@@ -18,11 +19,37 @@ libp11_kit_engine_la_LDFLAGS = \
 	$(P11KIT_LDFLAGS) \
 	$(CRYPTO_LDFLAGS)
 
+systemd_userunit_DATA =  \
+	p11-kit-remote.socket  \
+	p11-kit-remote@.service
+
+p11-kit-remote@.service: p11-kit-remote@.service.in
+	$(AM_V_GEN) sed -e 's|@bindir[@]|$(bindir)|g' \
+			-e 's|@p11kit_proxy_module[@]|$(P11KIT_PROXY_MODULE)|g' $< >$@
+
+install-data-hook:
+	$(MKDIR_P) $(DESTDIR)$(systemd_userunitdir)/sockets.target.wants
+	$(LN_S) -f ../p11-kit-remote.socket $(DESTDIR)$(systemd_userunitdir)/sockets.target.wants/p11-kit-remote.socket
+
+uninstall-local:
+	rm -f $(DESTDIR)$(systemd_userunitdir)/sockets.target.wants/p11-kit-remote.socket
+
+CLEANFILES = \
+	p11-kit-remote@.service
+
 man_MANS = \
-	libp11-kit-engine.so.1
+	libp11-kit-engine.so.1 \
+	p11-kit-remote.socket.5 \
+	p11-kit-remote@.service.5
 
 EXTRA_DIST = \
-	$(man_MANS)
+	$(man_MANS) \
+	p11-kit-remote.socket \
+	p11-kit-remote@.service.in
 
 DISTCHECK_CONFIGURE_FLAGS = \
-	--with-libcrypto-enginesdir='$${prefix}/lib/p11-kit-proxy.so'
+	--with-libcrypto-enginesdir='$${prefix}/lib/p11-kit-proxy.so' \
+	--with-systemd-userunitdir='$${prefix}/lib/systemd/user' \
+	--with-p11kit-proxy-module='$${prefix}/lib/openssl/engines'
+
+.DELETE_ON_ERROR:
