--- a/Makefile.am
+++ b/Makefile.am
@@ -18,5 +18,11 @@ libp11_kit_engine_la_LDFLAGS = \
 	$(P11KIT_LDFLAGS) \
 	$(CRYPTO_LDFLAGS)
 
+man_MANS = \
+	libp11-kit-engine.so.1
+
+EXTRA_DIST = \
+	$(man_MANS)
+
 DISTCHECK_CONFIGURE_FLAGS = \
 	--with-libcrypto-enginesdir='$${prefix}/lib/p11-kit-proxy.so'
